--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 .blue {
-			background-color:blue
+			background-color: rgb(17, 223, 17);
+            display:flex;
+            height: 100vh;
+            justify-content: center;
+            align-content: center;
 }
 .circle{
 			border-radius:50%;
